tests/error/ptr_match.gw
// [contains] not match found for operator
typedef void (test0)()
function void test1(int i){}
test1 @=> test0;
